# coco-lib

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  justfile  pyproject.toml
.github/workflows/: ci.yml
coco_lib/: bases.py  common.py  imagecaptioning.py  keypointdetection.py  objectdetection.py  panopticsegmentation.py
src/coco_lib/: __init__.py  bases.py  common.py  imagecaptioning.py  keypointdetection.py  objectdetection.py  panopticsegmentation.py
tests/: README.md  __init__.py  conftest.py  test_bases.py  test_common.py  test_datetime_parsing.py  test_imagecaptioning.py  test_integration.py  test_keypointdetection.py  test_objectdetection.py  test_panopticsegmentation.py
