[project]
name = "coco-lib"
version = "0.1.4"
requires-python = ">=3.6"
authors = [
    {name = "Kevin Barnard", email = "kbarnard@mbari.org"}
]
maintainers = [
    {name = "Kevin Barnard", email = "kbarnard@mbari.org"}
]
description = "COCO dataset library."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    "dataclasses-json>=0.5.4"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/coco_lib"]
