[project]
name = "coco-lib"
version = "0.1.4"
requires-python = ">=3.6"
authors = [
    {name = "Kevin Barnard", email = "kbarnard@mbari.org"}
]
maintainers = [
    {name = "Kevin Barnard", email = "kbarnard@mbari.org"}
]
description = "COCO dataset library."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    "dataclasses-json>=0.5.4"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/coco_lib"]

[dependency-groups]
dev = [
    "pytest>=7.0.1",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.0.0",
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
